# rag-local-llm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: build_index.py  load_docs.py  query_rag.py  split_docs.py
