[project]
name = "rag-local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "langchain-text-splitters>=1.1.2",
    "protobuf>=7.34.1",
    "sentence-transformers>=5.4.1",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
